src/ui/sass/trumbowyg.scss
$light-color: #ecf0f1 !default;
$dark-color: #222 !default;

$modal-submit-color: #2ecc71 !default;
$modal-reset-color: #EEE !default;

$transition-duration: 150ms !default;
$slow-transition-duration: 300ms !default;

#trumbowyg-icons {
    overflow: hidden;
    visibility: hidden;
    height: 0;
    width: 0;

    svg {
        height: 0;
        width: 0;
    }
}

.trumbowyg-box,
.trumbowyg-modal {
    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }

    svg {
        width: 17px;
        height: 100%;
        fill: $dark-color;
    }
}

.trumbowyg-box,
.trumbowyg-editor {
    display: block;
    position: relative;
    border: 1px solid #DDD;
    width: 100%;
    min-height: 300px;
    margin: 17px auto;
}

.trumbowyg-box .trumbowyg-editor {
    margin: 0 auto;
}

.trumbowyg-box.trumbowyg-fullscreen {
    background: #FEFEFE;
    border: none !important;
}

.trumbowyg-editor,
.trumbowyg-textarea {
    position: relative;
    box-sizing: border-box;
    padding: 20px;
    min-height: 300px;
    width: 100%;
    border-style: none;
    resize: none;
    outline: none;
    overflow: auto;

    &.trumbowyg-autogrow-on-enter {
        transition: height $slow-transition-duration ease-out;
    }
}

.trumbowyg-box-blur .trumbowyg-editor {
    *,
    &::before {
        color: transparent !important;
        text-shadow: 0 0 7px #333;

        @media screen and (min-width: 0 \0) {
            color: rgba(200, 200, 200, 0.6) !important;
        }
        @supports (-ms-accelerator:true) {
            color: rgba(200, 200, 200, 0.6) !important;
        }
    }
    img,
    hr {
        opacity: 0.2;
    }
}

.trumbowyg-textarea {
    position: relative;
    display: block;
    overflow: auto;
    border: none;
    font-size: 14px;
    font-family: "Inconsolata", "Consolas", "Courier", "Courier New", sans-serif;
    line-height: 18px;
}

.trumbowyg-box.trumbowyg-editor-visible {
    .trumbowyg-textarea {
        height: 1px !important;
        width: 25%;
        min-height: 0 !important;
        padding: 0 !important;
        background: none;
        opacity: 0 !important;
    }
}

.trumbowyg-box.trumbowyg-editor-hidden {
    .trumbowyg-textarea {
        display: block;
    }
    .trumbowyg-editor {
        display: none;
    }
}

.trumbowyg-box.trumbowyg-disabled {
    .trumbowyg-textarea {
        opacity: 0.8;
        background: none;
    }
}

.trumbowyg-editor[contenteditable=true]:empty:not(:focus)::before {
    content: attr(placeholder);
    color: #999;
    pointer-events: none;
}

.trumbowyg-button-pane {
    width: 100%;
    min-height: 36px;
    background: $light-color;
    border-bottom: 1px solid darken($light-color, 7%);
    margin: 0;
    padding: 0 5px;
    position: relative;
    list-style-type: none;
    line-height: 10px;
    backface-visibility: hidden;
    z-index: 11;

    &::after {
        content: " ";
        display: block;
        position: absolute;
        top: 36px;
        left: 0;
        right: 0;
        width: 100%;
        height: 1px;
        background: darken($light-color, 7%);
    }

    .trumbowyg-button-group {
        display: inline-block;

        .trumbowyg-fullscreen-button svg {
            color: transparent;
        }

        &::after {
            content: " ";
            display: inline-block;
            width: 1px;
            background: darken($light-color, 7%);
            margin: 0 5px;
            height: 35px;
            vertical-align: top;
        }

        &:last-child::after {
            content: none;
        }
    }

    button {
        display: inline-block;
        position: relative;
        width: 35px;
        height: 35px;
        padding: 1px 6px !important;
        margin-bottom: 1px;
        overflow: hidden;
        border: none;
        cursor: pointer;
        background: none;
        vertical-align: middle;
        transition: background-color $transition-duration, opacity $transition-duration;

        &.trumbowyg-textual-button {
            width: auto;
            line-height: 35px;
            user-select: none;
        }
    }

    &.trumbowyg-disable button:not(.trumbowyg-not-disable):not(.trumbowyg-active),
    button.trumbowyg-disable,
    .trumbowyg-disabled & button:not(.trumbowyg-not-disable):not(.trumbowyg-viewHTML-button) {
        opacity: 0.2;
        cursor: default;
    }
    &.trumbowyg-disable,
    .trumbowyg-disabled & {
        .trumbowyg-button-group::before {
            background: darken($light-color, 3%);
        }
    }

    button:not(.trumbowyg-disable):hover,
    button:not(.trumbowyg-disable):focus,
    button.trumbowyg-active {
        background-color: #FFF;
        outline: none;
    }

    .trumbowyg-open-dropdown {
        &::after {
            display: block;
            content: " ";
            position: absolute;
            top: 25px;
            right: 3px;
            height: 0;
            width: 0;
            border: 3px solid transparent;
            border-top-color: #555;
        }

        &.trumbowyg-textual-button {
            padding-left: 10px !important;
            padding-right: 18px !important;

            &::after {
                top: 17px;
                right: 7px;
            }
        }
    }

    .trumbowyg-right {
        float: right;
    }
}
/* ... */

